--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "改写源码中的函数为可exports.XXX形式",
   "main": "main.js",
   "bin": {
-    "cwb": "./bin/index.js"
+    "wb": "./bin/index.js"
   },
   "scripts": {
     "test": "test"
