--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/xiaobaifeng/learn-js-AST.git"
   },
-  "keywords": [
-    "[]\u001b[D\"\"\u001b[DAST\"",
-    "\"\"\u001b[Djs-AST\"]"
-  ],
+  "keywords": ["[]\u001b[D\"\"\u001b[DAST\"", "\"\"\u001b[Djs-AST\"]"],
   "author": "xiaobaifeng",
   "license": "ISC",
   "bugs": {
@@ -25,8 +22,10 @@
   "homepage": "https://github.com/xiaobaifeng/learn-js-AST#readme",
   "dependencies": {
     "fs": "0.0.1-security",
+    "node-xlsx": "^0.15.0",
     "recast": "^0.18.5",
     "shelljs": "^0.8.3",
+    "xlsx": "^0.16.6",
     "yargs": "^15.4.1"
   }
 }
